{{$NEXT}}

- Small fixes to make sure that you can pass both readonly and locked hashes
  to both validation_for and the subroutine it creates for you. Locked hashes
  work and readonly hashes sort of work on some Perls.


0.12     2016-08-16

- Require Specio for tests instead of Type::Tiny. Type::Tiny does not work
  with blead and the maintainer has not responded to bug reports for a while.


0.11     2016-08-14

- Use Sub::Util instead of Sub::Name as our optional sub-naming module, since
  Sub::Util is part of core as of 5.22.


0.10     2016-08-10

- The parameters you pass when creating a validator are now validated.

- The $e->message returned when a Moose type fails now includes the parameter
  name or position. Adding these for other type systems will come in a future
  release.


0.09     2016-07-04

- Really make Sub::Name optional.


0.08     2016-07-03

- Renamed from Params-CheckCompiler to Params-ValidationCompiler.

- Made Sub::Name optional. If you try to set the name of a generation
  validation sub without Sub::Name installed, you will get a fatal error.


0.07     2016-06-18

- Make the compiled sub for checking named params die if given a single object
  as an argument, even if the object is implemented using a hashref. However,
  if the object overloads hash dereferencing then the overloading is
  used. Reported by Mark Fowler. GitHub #3.

- Renamed compile() to validation_for(). The latter is not a very specific
  name. Requested by Mark Fowler. GitHub #1.


0.06     2016-06-18

- Require Type::Tiny for tests. Reported by Slave Rezic. RT #115413.

- Fix tests when Moose is installed but Devel::PartialDump is not. Reported by
  Slave Rezic. RT #115413.


0.05     2016-06-18

- Removed all remaining uses of Moo.


0.04     2016-06-17

- Removed more modules from test prereqs that are only used in optional tests.

- Replace Throwable with Exception::Class.


0.03     2016-06-17
